infisical/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical
  labels:
    app: infisical
